# thesis_project

./: pyproject.toml  requirements.txt  start_backend.ps1
backend/: main.py  pyproject.toml  requirements.txt  setup_ekb.py
backend/knowledge_base/ethical_frameworks/: EF-02_deontological.json  EF-03_maximin.json  EF-05_evt.json  EF-06_virtue_ethics.json  Ef-01_utilitarian.json
backend/notebooks/: gradio_showcase_playground.ipynb  mathematical_layer_playground.ipynb  pipeline_playground.ipynb  pipeline_playground.py  rag_runtime_playground.ipynb
backend/tests/: test_agentic_controller.py  test_api.py  test_mathematical_layer.py  test_rag.py  test_reasoning_llm.py  test_scenario_parser.py
backend/thesis/: __init__.py  models.py  normalization.py  parser.py  pipeline.py
backend/thesis/agentic_controller/: README.md  __init__.py  controller.py  models.py
backend/thesis/api/: __init__.py  app.py  examples.py  payload.py  runner.py  serializers.py  storage.py
backend/thesis/api/data/: av_ethics_scenarios_100.json
backend/thesis/core/: __init__.py  models.py  normalization.py  pipeline.py
backend/thesis/ekb_generator/: __init__.py  agent.py  prompts.py  schema.py
backend/thesis/mathematical_layer/: engine.py
backend/thesis/rag/: __init__.py  engine.py  ingestion.py  lazy.py
backend/thesis/reasoning_llm/: engine.py  prompt.py
backend/thesis/scenario_parser/: __init__.py  engine.py  llm_agent.py
frontend/: package-lock.json  package.json  vite.config.ts
knowledge_base/: README.md
notebooks/: gradio_showcase_playground.ipynb  pipeline_playground.py  (+6 more)
(+44 files in other folders)
