[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis"
version = "0.1.0"
description = "Deterministic AV ethics thesis package with scenario parsing and mathematical risk analysis."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "gradio>=5.0",
  "langchain>=1.2",
  "langchain-chroma>=1.1",
  "langchain-community>=0.4",
  "langchain-openai>=1.1",
  "langchain-text-splitters>=1.1",
  "python-dotenv>=1.1",
  "pypdf>=6.7",
  "tiktoken>=0.9",
  "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
  "httpx>=0.28",
  "ipykernel>=6.29",
  "jupyter>=1.1",
  "pytest>=8.3",
]

[tool.setuptools.packages.find]
include = ["thesis*"]
